[package]
name = "examples"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde = "*"
tokio = { version = "*", features = ["full"] }
rdqs = { version = "*", path = "../lib", features = ["redis", "tokio"] }
anyhow = "*"

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "worker"
path = "worker.rs"
