[package]
name = "rdqs"
version = "0.1.0"
edition = "2018"
description = "Rust Distributed Queue System"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
redis = []
tokio = []

default = ["redis", "tokio"]

[dependencies]
serde = "*"
tokio = { version = "*", features = ["full"] }
fred = "*"
