[package]
name = "rdqs"
version = "0.1.0"
edition = "2018"
description = "Rust Distributed Queue System"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
redis = []
tokio = []

default = ["redis", "tokio"]

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }
rdqs_macro = { version = "*", path = "../macros" }
fred = "*"
async-trait = "0.1.58"
