[package]
name = "rdqs_macro"
version = "0.1.0"
edition = "2021"
description = "Rust Distributed Queue System Macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
serde = {version = "*", features = ["derive"]}
serde_json = "1.0"
syn = {version = "*", features = ["derive","parsing"]}
tokio = {version = "*", features = ["full"]}
